--- a/q5.md
+++ b/q5.md
@@ -1,1 +1,23 @@
+Approach 1:
+This snippet calls loops through each iteration of doubleL(n) and prints the results.
+The function double n creates an empty list called res and for each number in the range 0 to
+n, the number i is multiplied by 2 and added to the list res.
 
+Approach 2:
+This snippet iterates through a list of numbers that are multiplied by 2 within the 
+range (5 in this case). For each iteration, the result is printed with an end parameter
+' : '.
+
+Approach 3:
+This snippet contains a function that takes a number (n). The function
+has a for loop which iterates for each value within the range 0-n. The function
+then yields the iteration and sends the result of i*2 back to the caller which is 
+a for loop that prints the value of each iteration of doubleG.
+
+
+2.
+doubleG(n) is a generator function. The advantages of this function are
+that the values generated are sent to the caller rather than being saved
+and returned. In this case, the result of i*2 is yielded, pausing the loop in 
+the function and sending the value back to the caller which prints the value. After
+this, doubleG continues its loop and repeats until condition is met.
